--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,8 +22,8 @@ $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
 $yellow-color: #efcc00 !default;
 
-$grey-color: #828282 !default;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color: #8A8B8C !default; // #828282 !default;
+$grey-color-light: lighten($grey-color, 30%);
 $grey-color-dark: #1c1c1d;
 $grey-900: #212529;
 
